--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="./css/signUp.css">
     <link rel="stylesheet" href="./css/share.css">
+    <link rel="stylesheet" href="./css/editable-span.css">
+    <link rel="stylesheet" href="./css/print.css" media="print">
 </head>
 <body>
     <div class="page" id="app">
@@ -16,7 +18,7 @@
                 <div class="page__aside--upper">
                         <button v-on:click="onClickSave">保存</button>
                         <button v-on:click="shareVisible=true">分享</button>
-                        <button>打印</button>
+                        <button v-on:click="print">打印</button>
                         <button>换肤</button>
                 </div>
                 <div class="page__aside--down">
@@ -45,10 +47,10 @@
                             <div class="description">
                                 <editable-span v-bind:disabled="mode === 'preview'" v-bind:value="skill.description" v-on:edit="onEdit(`skills[${index}].description`, $event)"></editable-span>
                             </div>
-                            <span v-if="index>=4 && mode === 'edit'" v-on:click="removeSkill(index)">删除</span>
+                            <span class="remove" v-if="index>=4 && mode === 'edit'" v-on:click="removeSkill(index)">删除</span>
                         </li>
                         <li v-if="mode === 'edit'">
-                            <span v-on:click="addSkill">添加</span>
+                            <span class="add" v-on:click="addSkill">添加</span>
                         </li>
                     </ul>
                 </section>
@@ -68,10 +70,10 @@
                             <p class="description">
                                     <editable-span v-bind:disabled="mode === 'preview'" v-bind:value="project.description" v-on:edit="onEdit(`projects[${index}].description`, $event)"></editable-span>
                             </p>
-                            <span v-if="index>=4 && mode === 'edit'" v-on:click="removeProject(index)">删除</span>
+                            <span class="remove" v-if="index>=4 && mode === 'edit'" v-on:click="removeProject(index)">删除</span>
                         </li>
                         <li v-if="mode === 'edit'">
-                            <span v-on:click="addProject">添加</span>
+                            <span class="add" v-on:click="addProject">添加</span>
                         </li>
                     </ol>
                 </section>
@@ -120,8 +122,8 @@
             <h1>分享</h1>
             <textarea readonly type="text" v-bind:value="shareLink"></textarea>
         </div>
-        <button class="page__preview" v-on:click="mode = 'edit'" v-if="mode === 'preview'">编辑模式</button>
-        <button class="page__edit" v-on:click="mode = 'preview'" v-if="mode === 'edit'">预览模式</button>
+        <button class="page__edit" v-on:click="mode = 'edit'" v-if="mode === 'preview'">编辑模式</button>
+        <button class="page__preview" v-on:click="mode = 'preview'" v-if="mode === 'edit'">预览模式</button>
      </div>
 
     <!-- leanCloud --> 
