--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
     <link rel="stylesheet" href="./css/share.css">
     <link rel="stylesheet" href="./css/editable-span.css">
     <link rel="stylesheet" href="./css/print.css" media="print">
+    <link rel="stylesheet" href="./css/skinPiker.css">
 </head>
-<body>
+<body class="default">
     <div class="page" id="app">
         <aside class="page__aside" v-show="mode === 'edit'">
                 <div class="page__aside--upper">
                         <button v-on:click="onClickSave">保存</button>
                         <button v-on:click="shareVisible=true">分享</button>
                         <button v-on:click="print">打印</button>
-                        <button>换肤</button>
+                        <button v-on:click="skinPikerVisible = !skinPikerVisible">换肤</button>
                 </div>
                 <div class="page__aside--down">
                         <button v-on:click="onLogout" v-show="hasLogin()">登出</button>
@@ -122,9 +123,15 @@
             <h1>分享</h1>
             <textarea readonly type="text" v-bind:value="shareLink"></textarea>
         </div>
+        <!-- 模式切换 -->
         <button class="page__edit" v-on:click="mode = 'edit'" v-if="mode === 'preview'">编辑模式</button>
         <button class="page__preview" v-on:click="mode = 'preview'" v-if="mode === 'edit'">预览模式</button>
-     </div>
+        <!-- 换肤 -->
+        <div v-show="skinPikerVisible" class="skinPiker">
+            <button v-on:click="setTheme('default')">默认</button>
+            <button v-on:click="setTheme('dark')">暗黑</button>
+        </div>
+    </div>
 
     <!-- leanCloud --> 
     <script src="./vendors/av-min.js"></script>
